# RTIC-ECMaster

./: .gitignore  Bohign_MS_ECAT_V2.5.xml  Cargo.toml  Makefile  README.md  build.rs  config.toml  ethercat-conf.bohign.xml  ethercat-conf.xml  memory.x  temporary_ecat_cmd.py  temporary_pdo_test.py
.cargo/: config.toml
docs/: architecture.md  cli-reference.md  config-flow.md  ethercat-v1-followups.md  linuxcnc-spi-bridge.md  pdo-planning-input.md  serial-monitoring.md
linuxcnc/: README.md  teensy_bridge_layout.h  teensy_ecat_bridge.c  teensy_ecat_bridge.hal
scripts/: generate_ethercat_config.py  generate_registers.py  view_teensy_serial.py
src/: main.rs
src/board/: clock_config.rs  cycle_timer.rs  fast_gpio.rs  host_spi.rs  mod.rs  teensy_pin_map.rs  usb_bootloader.rs
src/ethercat/: cia402.rs  cli.rs  cyclic.rs  datagram.rs  dc.rs  device.rs  domain.rs  ecrt.rs  fmmu_config.rs  fsm_change.rs  fsm_coe.rs  fsm_master.rs  fsm_pdo.rs  fsm_pdo_entry.rs  fsm_scan.rs  fsm_sii.rs  fsm_slave.rs  fsm_slave_config.rs  fsm_slave_scan.rs  globals.rs  mailbox.rs  master.rs  mod.rs  pdo.rs  pdo_entry.rs  pdo_list.rs  sdo.rs  sdo_entry.rs  sdo_request.rs  slave.rs  slave_config.rs  sync.rs  sync_config.rs
src/ethercat/config/: generated.rs  (+3 more)
src/hal/: host_bridge.rs  mod.rs  motion_buffer.rs  pin.rs  process_data.rs  spi_layout.rs  spi_layout_generated.rs
src/modbus/: mod.rs  modbus_slave.rs  register_map.rs  registers.json
src/net/: boot_diag.rs  enet_driver.rs  enet_ring.rs  ethernet.rs  mod.rs  w5500_spi.rs
tests/: test_modbus_registers.py
tools/: soft_reboot_teensy.py
